force-app/main/default/objects/Aqua_Warranty_Record__c/Aqua_Warranty_Record__c.object-meta.xml
<CustomObject>
    <label>Aqua Warranty Record</label>
    <nameField>
        <displayFormat>AWR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Warranty Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>