force-app/main/default/objects/Aqua_Warranty_Record__c/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>