force-app/main/default/objects/Aqua_Warranty_Record__c/fields/LOVING_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to LOVING custom Work_Order__c. The legacy Work_Order__c field on this object references the standard WorkOrder; this field correctly references the custom Work_Order__c object used throughout the LOVING platform.</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Aqua Warranty Records</relationshipLabel>
    <relationshipName>Aqua_Warranty_Records_LOVING</relationshipName>
    <type>Lookup</type>
</CustomField>