force-app/main/default/objects/Aqua_Warranty_Record__c/fields/Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Date__c</fullName>
    <label>Replacement Date</label>
    <type>Date</type>
</CustomField>