force-app/main/default/objects/Aqua_Warranty_Record__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Aqua Warranty Records</relationshipLabel>
    <relationshipName>Aqua_Warranty_Records_WO</relationshipName>
    <type>Lookup</type>
</CustomField>